stream-meshed/hello-world-grpc.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: server
  namespace: helloworld
spec:
  replicas: 5
  selector:
    matchLabels:
      app: server-svc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: server-svc
    spec:
      containers:
      - env:
        - name: GRPC_PORT
          value: "50051"
        image: glindsell/stream-meshed-server:latest
        name: server-svc
        ports:
        - containerPort: 50051
          name: grpc
        resources:
          requests:
            cpu: 100m
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: helloworld
spec:
  selector:
    app: server-svc
  clusterIP: None
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: client
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-svc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: client-svc
    spec:
      containers:
      - env:
        - name: SERVER_PORT
          value: "50051"
        - name: SERVERSVC_HOST
          value: server-svc.helloworld:50051
        - name: INDEX_BUNDLE
          value: dist/index_bundle.js
        image: glindsell/stream-meshed-client:latest
        name: client-svc
        ports:
        - containerPort: 50051
          name: grpc
        resources:
          requests:
            cpu: 100m
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
  namespace: helloworld
spec:
  type: LoadBalancer
  selector:
    app: client-svc
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
