stream-meshed/hw_server.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: server
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server-svc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: server-svc
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: GRPC_PORT
          value: "50051"
        image: glindsell/stream-meshed-server:latest
        name: server-svc
        ports:
        - containerPort: 50051
          name: grpc
        resources:
          requests:
            cpu: 100m
---
kind: Service
apiVersion: v1
metadata:
  name: server-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: server-svc
  ports:
  - name: grpc
    port: 50051
    nodePort: 32767
    targetPort: 50051
---
