stream-meshed/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hw-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local
spec:
  rules:
  - host: ingress.local
    http:
      paths:
      - backend:
          serviceName: server-svc
          servicePort: grpc
